syntax = "proto3";

package sum;

option go_package = "calculator/proto";

message AvgRequest {
    int64 number = 1;
}

message AvgResponse {
    double result = 1;
}
