syntax = "proto3";

package sum;

option go_package = "calculator/proto";

message MaxRequest {
    int64 number = 1;
}

message MaxResponse {
    int64 result = 1;
}
