syntax = "proto3";

package sum;

option go_package = "calculator/proto";

message SqrtRequest {
    int64 number = 1;
}

message SqrtResponse {
    double Result = 1;
}
